feat: use virtual threads in the k8s-listener thread
This is safe as those threads are mainly sleeping.